@@ -1,3 +1,4 @@
+- Add shortcut Ctrl+Enter to insert a linebreak and submit from a script editor
 - Reduce CPU usage while idle
 - Pareto-plot plugin gains more tabulation options				TODO: also use in piechart, barplot
 - rk.results() now prints rownames, where appropriate			TODO: test
